--- a/css/CustomStyles.css
+++ b/css/CustomStyles.css
@@ -87,7 +87,7 @@
 }
 .close.cursor {
     font-size: 60px;
-    color: whitesmoke;
+    color: black;
 }
 .d-block{
     font-family: 'Saira Extra Condensed',serif !important;
